insertimi i tekstit, fotove dhe Maps

--- a/about-cattery.html
+++ b/about-cattery.html
@@ -105,14 +105,12 @@
                     </div>
                     <div class="col-md-8 fs-text-h">
                         <h1 class="display-none">Cattery</h1>
-                        <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded and grassed and have great views of the farm with its acres of land. Dogs are fed twice daily with Royal Canin biscuits and Butch meat, special diets can also be catered for. All dogs are given Frontline on entry to the kennel at a charge of Dhs 60 to protect against ticks and fleas, ticks being a very common problem in the U.A.E.</p>
-                        <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded and grassed and have great views of the farm with its acres of land. Dogs are fed twice daily with Royal Canin biscuits and Butch meat, special diets can also be catered for. All dogs are given Frontline on entry to the kennel at a charge of Dhs 60 to protect against ticks and fleas, ticks being a very common problem in the U.A.E.</p>
+                        <p>We have 40 units in the cattery, these building are A/C and each unit is equipped with play mats, table and toys. Each unit has its own private outside garden which is shaded, containing tree stumps as great viewing and scratch posts. They can sit and watch the goats and camels wander by and birds chatting on the fences. Cats are fed with Royal Canin and a variety of soft food including Waitrose, Friskies, Whiskas etc.</p>
+                        <p>We have just recently opened our new Cattery in Al Khawaneej where we have 18 large luxurious catteries. All the Catteries are AC controlled inside and have fully enclosed outdoor runs so your cat can enjoy the view & fresh farm air. Each Cattery is equipt with scratch posts, scratch mats, toys and of course our cat loving staff who go the extra mile to ensure your cat is happy & well looked after. Posh Paws offer a Pet Collection & Delivery service to both Dubai & Sharjah, Professional Grooming, and free delivery of Pet Food & Pet Products.</p>
                         <h1>Pricing</h1>
-                        <p>Small to 10Kg Dhs 90 per night<br>
-                            Medium to 20Kg Dhs 100 per night<br>
-                            Large 20+Kg Dhs 110 per night<br>
-                            20% discount for additional pets.<br>
-                            Long term stay - please enquire for rates.</p>
+                        <p>Cats Dhs 80 per night<br>
+20% discount for additional pets.<br>
+Long term stay - please enquire for rates.</p>
                     </div>
                     <div class="col-md-12" style="text-align: center">
                         <button class="fs-text-h-button">Book an Appointment</button>
@@ -156,11 +154,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
-
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
