--- a/about-kennels.html
+++ b/about-kennels.html
@@ -155,11 +155,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
-
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Ajman&key=AIzaSyD0xjjLKxNEUctdqyIeBpvZZxRox9qhrpI" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
@@ -202,7 +198,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">Cat Boarding Form</h4>
+            <h4 class="modal-title" id="myModalLabel">Dog Boarding Form</h4>
             <img src="img/3points.svg" style="width:70px">
         </div>
       <div class="modal-body">
@@ -280,9 +276,9 @@
             <div class="col-md-4" style="padding: 5px 3px 0px 3px">                
             <select class="select-package">
                 <option value="" selected disabled>Select Package</option>
-                <option value="">A</option>
-                <option value="">B</option>
-                <option value="">C</option>
+                <option value="">Small<span>1-10/kg</span></option>
+                <option value="">Medium<span>11-20/kg</span></option>
+                <option value="">Large<span>20+/kg</span></option>
             </select>
             </div>
         </div>
