--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-12 cover-text">
                     <h1 class="first-paragph">How it</h1>
                     <h1 class="second-paragph">ALL BEGAN</h1>
-                    <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="contact.html"><button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
             </div>
         </div>
@@ -93,12 +93,18 @@
     <!-- About Section -->
     <section id="about" class="about-section1">
         <div class="container">
-            <div class="row">
+            <div class="row col-md-6">
                 <h1>How it all Began</h1>
                 <img src="img/3points.svg" style="width:70px">
-                <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started. It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays; so that’s how the boarding started and it grew and it grew. That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel with a caring and attentive staff.</p>
-                <p>I wanted more than your usual Boarding Kennels and Cattery, I wanted a place that the dogs and cats had interest in, had fun, relaxed, socialised, lots of smells and open spaces, more like a holiday camp. If the owner’s could go on holiday, why shouldn’t their pets? That’s why being located on a lush green farm was the perfect place, chickens, goats and cows too!</p>
-                <p>None of my staff are employed for their looks or language skills!, but for their ability to communicate and understand the needs of the many pets that pass through our gates and make their stay an enjoyable and sociable one; a holiday place they want to come back to again and again.</p>
+                <p>It all started with a bad haircut day, not me but my dog ‘Berty’, at the local kennels. So off to the UK I went on a month long grooming course and that’s how Posh Paws grooming started, I wanted my dogs to enjoy being groomed!.
+It wasn’t long before, my clients were asking me to take care of their dogs during the summer holidays and that’s how the boarding started and it grew and it grew. </p>
+<p>That’s when I had to open up Posh Paws Boarding Kennels and Cattery to cope with the growing demand for a high quality kennel and cattery facility with caring and attentive staff.
+I wanted more than your usual Boarding Kennels and Cattery, I wanted a place that the dogs and cats had interest in, had fun, relaxed, socialised, lots of smells and open spaces, more like a holiday camp.</p>
+<p> If the owner’s could go on holiday, why shouldn’t their pets? That’s why being located on a lush green farm was the perfect place to start !
+None of my staff are employed for their looks or language skills!, but for their ability to communicate and understand the needs of the many pets that pass through our gates and make their stay an enjoyable and sociable one; a holiday place they want to come back to again and again.</p>
+            </div>
+            <div class="col-md-6 inmemory">
+                <img src="img/Photographs-Roopak19-01.png">
             </div>
         </div>
     </section>
@@ -156,11 +162,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
-
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Ajman&key=AIzaSyD0xjjLKxNEUctdqyIeBpvZZxRox9qhrpI" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
