--- a/farm.html
+++ b/farm.html
@@ -112,7 +112,7 @@ Stables, Al Khawaneej 2, Dubai</h1>
         <div class="container">
             <div class="row padding-middle">
                 <div class="col-md-6 image-section">
-                    <img src="img/img30.png">
+                    <img src="img/IMG_4571-01.png">
                 </div>
                 <div class="col-md-6 text-section">
                     <h1>School Trips to Farm / School Visits</h1>
@@ -130,7 +130,7 @@ Stables, Al Khawaneej 2, Dubai</h1>
                     <button data-toggle="modal" data-target="#events_modal">Event <i class="fa fa-angle-right" aria-hidden="true"></i></button>
                 </div>
                 <div class="col-md-6 image-section">
-                    <img src="img/img31.png">
+                    <img src="img/IMG_45712-01.png">
                 </div>
             </div>
         </div>
@@ -303,7 +303,7 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
         <div class="clearfix"></div>
       </div>
         <div class="modal-footer">
-            <button type="button" class="popup_button">Save changes</button>
+            <button type="button" class="popup_button">Confirm</button>
         </div>
     </div>
   </div>
@@ -321,8 +321,8 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">Petting Farm Parties</h4>
-            <p>Our new farm in Al Khawaneej 2 will be open on 1 st November at Al Hamra Stables.</p>
+            <h4 class="modal-title" id="myModalLabel">School Booking Form</h4>
+            <p>The Petting Farm at Al Hamra Stables, Al Khawaneej 2, Dubai</p>
             <img src="img/3points.svg" style="width:70px">
         </div>
       <div class="modal-body">
@@ -350,7 +350,7 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
         <div class="clearfix"></div>
       </div>
         <div class="modal-footer">
-            <button type="button" class="popup_button">Save changes</button>
+            <button type="button" class="popup_button">Confirm</button>
         </div>
     </div>
   </div>
@@ -365,8 +365,8 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h4 class="modal-title" id="myModalLabel">Petting Farm Parties</h4>
-            <p>Our new farm in Al Khawaneej 2 will be open on 1 st November at Al Hamra Stables.</p>
+            <h4 class="modal-title" id="myModalLabel">Event Booking</h4>
+            <p>The Animal Sanctuary & Petting Farm. Now located in Dubai</p>
             <img src="img/3points.svg" style="width:70px">
         </div>
       <div class="modal-body">
@@ -397,7 +397,7 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
         <div class="clearfix"></div>
       </div>
         <div class="modal-footer">
-            <button type="button" class="popup_button">Save changes</button>
+            <button type="button" class="popup_button">Confirm</button>
         </div>
     </div>
   </div>
