--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-12 cover-text">
                     <h1 class="first-paragph">Your Pets HOME</h1>
                     <h1 class="second-paragph">AWAY FROM HOME <br><span style="color: #fe908b; font-size: 30px;">"WEBSITE UNDER CONSTRUCTION"</span></h1>
-                    <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="contact.html"><button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
                     <img src="img/home-icon1.svg" class="icons-a1">
                     <h1>Kennels</h1>
                     <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
+                    <p>We have in total 102 kennels, 42 large and 60 medium, all are equipped with A/C and each have their own private shaded garden. In addition we have 12 communal areas, all with paddling pools, tunnels and toys. These areas are shaded... </p>
                     <a href="about-kennels.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
@@ -107,7 +107,7 @@
                     <img src="img/home-icon2.svg" class="icons-a1">
                     <h1>Cattery</h1>
                     <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
+                    <p>We have 40 units in the cattery, these building are A/C and each unit is equipped with play mats, table and toys. Each unit has its own private outside garden which is shaded, containing tree stumps as great viewing and scratch posts. </p>
                     <a href="about-cattery.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
@@ -115,7 +115,7 @@
                     <img src="img/home-icon3.svg" class="icons-a1">
                     <h1>Grooming</h1>
                     <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
+                    <p>Posh Paws grooming has been operating since 2004 and has built up an excellent reputation. The salon is open 6 days a week by appointment only. All staff are professionally trained and are very understanding of the pets individual needs.</p>
                     <a href="about-grooming.html"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
@@ -123,7 +123,7 @@
                     <img src="img/home-icon4.svg" class="icons-a1">
                     <h1>Relocation</h1>
                     <img src="img/3points.svg" class="points3">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and</p>
+                    <p>Our relocation department can assist you with all the necessary information required in exporting or importing your pets worldwide. We like to ensure that your pet arrives safely. Please contact us at poshpawsdubai@hotmail.com or call the office with your enquiry.</p>
                     <a href="about-relocation"><button>More <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
 
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 display-none">
-                    <img src="img/home-img-2.png" class="img-responsive" >
+                    <img src="img/2211s-01.png" class="img-responsive" >
                 </div>
 
                 <div class="col-md-6 col-xs-12 col-sm-12 section3-body" style="padding: 0px 20px">
@@ -233,10 +233,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
 
                </div>
                <div class="col-md-6 col-xs-12">
@@ -289,8 +286,7 @@
 
     <!-- Mix, Maps,  -->
     <script type="text/javascript" src="js/poshpaws.js"></script>
-    <!-- Maps -->
-    <script type='text/javascript' src='https://embedmaps.com/google-maps-authorization/script.js?id=f7a81188932b979f00e906995100902308c60873'></script>
+
 
 </body>
 
