--- a/about-grooming.html
+++ b/about-grooming.html
@@ -84,7 +84,7 @@
                 <div class="col-lg-12 cover-text">
                     <h1 class="first-paragph">About</h1>
                     <h1 class="second-paragph">GROOMING</h1>
-                    <button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                    <a href="contact.html"><button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
             </div>
         </div>
@@ -147,11 +147,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <div style='overflow:hidden;height:400px;width:100%;'>
-                        <div id='gmap_canvas' style='height:400px;width:100%;'></div>                     
-                    </div> <a href='http://maps-generator.com/'>&nbsp;</a>
-
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
