rregullimi i butonave te demtuar nga blini :P hahaha

--- a/about-kennels.html
+++ b/about-kennels.html
@@ -44,7 +44,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="#" href="index.html">HOME</a>
+                        <a class="#" href="index.php">HOME</a>
                     </li>
                     <li>
                         <a class="#" href="about.html">ABOUT</a>
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Ajman&key=AIzaSyD0xjjLKxNEUctdqyIeBpvZZxRox9qhrpI" allowfullscreen></iframe>
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
