--- a/farm.html
+++ b/farm.html
@@ -46,7 +46,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="#" href="index.html">HOME</a>
+                        <a class="#" href="index.php">HOME</a>
                     </li>
                     <li>
                         <a class="#" href="about.html">ABOUT</a>
@@ -112,7 +112,7 @@ Stables, Al Khawaneej 2, Dubai</h1>
         <div class="container">
             <div class="row padding-middle">
                 <div class="col-md-6 image-section">
-                    <img src="img/IMG_4571-01.png">
+                    <img src="img/DSC_0859.jpg">
                 </div>
                 <div class="col-md-6 text-section">
                     <h1>School Trips to Farm / School Visits</h1>
@@ -408,7 +408,6 @@ goat and ferret. Please mention any you don’t require." style="border-color: r
                   </div>
                     <div class="modal-footer">
                         <input type="submit" value="Send" />
-
                     </div>
             </form> 
         </div>
