--- a/about-grooming.html
+++ b/about-grooming.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="#" href="index.html">HOME</a>
+                        <a class="#" href="index.php">HOME</a>
                     </li>
                     <li>
                         <a class="#" href="about.html">ABOUT</a>
