--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="#" href="index.html">HOME</a>
+                        <a class="#" href="index.php">HOME</a>
                     </li>
                     <li>
                         <a class="active" href="about.html">ABOUT</a>
@@ -104,7 +104,7 @@ I wanted more than your usual Boarding Kennels and Cattery, I wanted a place tha
 None of my staff are employed for their looks or language skills!, but for their ability to communicate and understand the needs of the many pets that pass through our gates and make their stay an enjoyable and sociable one; a holiday place they want to come back to again and again.</p>
             </div>
             <div class="col-md-6 inmemory">
-                <img src="img/Photographs-Roopak19-01.png">
+                <img src="img/Photographs-Roopak19-01.png" style="width: 100%;">
             </div>
         </div>
     </section>
@@ -162,7 +162,7 @@ None of my staff are employed for their looks or language skills!, but for their
         <div class="container">
             <div class="row">
                <div class="col-md-6 display-none">
-                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Ajman&key=AIzaSyD0xjjLKxNEUctdqyIeBpvZZxRox9qhrpI" allowfullscreen></iframe>
+                   <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
