Add notify js package, add in emails some forms

--- a/about.html
+++ b/about.html
@@ -202,6 +202,7 @@ None of my staff are employed for their looks or language skills!, but for their
     <!-- Scrolling Nav JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
+    <script type="js/notify.js"></script>
 
     <!-- Mix, Maps,  -->
     <script type="text/javascript" src="js/poshpaws.js"></script>
