rregullimi i te gjitha hartave te webit.

--- a/about-relocation.html
+++ b/about-relocation.html
@@ -82,7 +82,7 @@
         <div class="container grooming-header-text">
             <div class="row">
                 <div class="col-lg-12 cover-text">
-                    <h1 class="first-paragph">Aout</h1>
+                    <h1 class="first-paragph">About</h1>
                     <h1 class="second-paragph">CATTERY</h1>
                     <a href="contact.html"><button>Book an Appointment <i class="fa fa-angle-right" aria-hidden="true"></i></button></a>
                 </div>
@@ -148,7 +148,7 @@
             <div class="row">
                <div class="col-md-6 display-none">
                    <script src='https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyC-4eV1iMaa_Fb_XBdc_p8wSLfSLgyJmbI'></script>
-                    <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Kennels%20and%20Cattery%20-%20Dubai%20Investment%20Park%202&key=AIzaSyB1A0WWqCpf5Yo10Xfi9Donutkgw-Dw2M4" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3616.5086621473547!2d55.14875891500523!3d24.98282618399629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjTCsDU4JzU4LjIiTiA1NcKwMDknMDMuNCJF!5e0!3m2!1sen!2s!4v1479142507239" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                </div>
                <div class="col-md-6 col-xs-12">
                    <h1>Contact Info</h1>
