--- a/farm.html
+++ b/farm.html
@@ -112,7 +112,7 @@ Stables, Al Khawaneej 2, Dubai</h1>
         <div class="container">
             <div class="row padding-middle">
                 <div class="col-md-6 image-section">
-                    <img src="img/DSC_0859.jpg">
+                    <img src="img/DSC_0859.JPG">
                 </div>
                 <div class="col-md-6 text-section">
                     <h1>School Trips to Farm / School Visits</h1>
@@ -243,7 +243,24 @@ Stables, Al Khawaneej 2, Dubai</h1>
             </div>
         </div>
     </section>
-
+        <!-- Contact Section -->
+    <section class="contact-section2">
+        <div class="container">
+            <div class="row">
+               <div class="col-md-6 desktop-d-n">
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.813906950584!2d55.523625415009725!3d25.209497483890463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjXCsDEyJzM0LjIiTiA1NcKwMzEnMzIuOSJF!5e0!3m2!1sen!2s!4v1479142461435" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+               </div>
+               <div class="col-md-6 col-xs-12">
+                   <h1>Contact Info</h1>
+                    <img src="img/3points.svg" style="width:50px">
+                    <h4>PO Box 6273 Ajman</h4>
+                    <p>Opening Hours 9am – 5pm</p>
+                    <p>Office: 050 2730973</p>
+                    <p>poshpawsdubai@yahoo.co.uk</p>
+               </div>
+            </div>
+        </div>
+    </section>
     <!-- Footer -->
     <footer class="container-fluid display-none">
         <div class="container">
